--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             // Intentar cargar el modelo
             try {
                 // CARGA EL ARCHIVO: Asegúrate que se llame 'modelo.ifc'
-                const model = await viewer.IFC.loadIfcUrl('./modelo.ifc');
+                const model = await viewer.IFC.loadIfcUrl('https://almariozamudio-az.github.io/proyecto-casa-libro/modelo.ifc');
                 modelID = model.modelID;
                 
                 // Ocultar pantalla de carga
